# nzd

./: .gitignore  CMakeLists.txt  makefile  readme.md
include/: Activation.h  DenseLayer.h  Matrix.h  Model.h  Optimizer.h  Struct.h  ThreadPool.h  Train.h
include/Common/: Gemm.h  Matrix.h  Struct.h  ThreadPool.h  Types.h
include/Core/: ConvLayer.h  DenseLayer.h  ILayer.h  Model.h  Train.h
include/Initializers/: HeInitializer.h  IWeightInitializer.h  Initializer.h  XavierInitializer.h
include/LossFunc/: CrossEntropy.h  ILoss.h
include/Optimizers/: Adam.h  IOptimizer.h  Momentum.h  Optimizer.h  SGD.h
include/Utils/: Activation.h  Mnist.h
notes/memo/: 251211.md  251213.md  251215.md
src/: Activation.cpp  DenseLayer.cpp  Matrix.cpp  Model.cpp  ModelIO.cpp  ModelSave.cpp  Train.cpp  main.cpp
src/Common/: Gemm.cpp  Matrix.cpp
src/Core/: ConvLayer.cpp  DenseLayer.cpp  Model.cpp  ModelIO.cpp  ModelIO.cpp.disable  Train.cpp
src/Core/Optimizers/: Optimizer.cpp
src/Initializers/: Initializer.cpp
src/LossFunc/: CrossEntropy.cpp
src/Optimizers/: Adam.cpp  Optimizer.cpp  SGD.cpp
src/Utils/: Activation.cpp
